fix: PostView content bleeding

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,3 +5,9 @@
 body {
   @apply bg-slate-700 text-slate-100;
 }
+
+@layer utilities {
+  .overflow-anywhere {
+    overflow-wrap: anywhere;
+  }
+}
